# learn-openGL

./: .gitignore  dictionary.txt  notes.txt
01_hello_window/.cache/clangd/index/: glad.c.82E6E84077B80D1E.idx  main.cpp.D2AF2BB5BA4176A4.idx
01_hello_window/src/: main.cpp
02_triangle/: CMakeLists.txt
02_triangle/.cache/clangd/index/: glad.c.E9CAC0BB10353520.idx  glad.h.3251F8C94A5DE43C.idx  khrplatform.h.41C6E4CA0C18339F.idx  main.cpp.79D61440B9034BC5.idx
02_triangle/include/: renderer.hpp
02_triangle/src/: main.cpp  renderer.cpp
03_triangleRemake/: CMakeLists.txt  plan.txt
03_triangleRemake/.cache/clangd/index/: glad.c.98DE88A9AD14F0FF.idx  glad.h.B5F10EB8B5936006.idx  khrplatform.h.F7B1E1E59175DFFD.idx  main.cpp.90386B9F37DA2D2D.idx
03_triangleRemake/include/: renderer.hpp
03_triangleRemake/src/: main.cpp  renderer.cpp
04_shaders/: CMakeLists.txt
04_shaders/include/: renderer.hpp  shader.hpp
04_shaders/shaders/: fragment.glsl  vertex.glsl
04_shaders/src/: main.cpp  renderer.cpp
05_textures/: CMakeLists.txt
05_textures/include/: renderer.hpp  texture.hpp
05_textures/shaders/: fragment.glsl  vertex.glsl
05_textures/src/: main.cpp  renderer.cpp
06_transformations/: CMakeLists.txt  plan.txt
06_transformations/include/: renderer.hpp
06_transformations/shaders/: vertex.glsl
06_transformations/src/: main.cpp  renderer.cpp  shader.cpp
07_Camera/: CMakeLists.txt  plan.txt
07_Camera/include/: app.hpp  common.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  window.hpp
07_Camera/shaders/: fragment.glsl  vertex.glsl
07_Camera/src/: app.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  window.cpp
hello_window/: CMakeLists.txt
hello_window/.cache/clangd/index/: glad.h.79878CB6FA9FF30A.idx  khrplatform.h.146261F71546DF73.idx
hello_window/src/: main.cpp
